<resources>
    <string name="app_name">Android Firewall</string>
    <string name="title_enabled">Android Firewall (Enabled)</string>
    <string name="title_disabled">Android Firewall (Disabled)</string>
    <string name="showrules">Show rules</string>
    <string name="applyrules">Apply rules</string>
    <string name="saverules">Save rules</string>
    <string name="applyrules2">Apply IPv6 rules</string>
    <string name="purgerules">Purge rules</string>
    <string name="setpwd">Set password</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="fw_enabled">Enable Firewall</string>
    <string name="fw_disabled">Disable Firewall</string>
    <string name="ipv6_enabled">IPv6 enabled</string>
    <string name="ipv6_disabled">IPv6 disabled</string>
    <string name="ipv6_was_enabled">IPv6 has been enabled</string>
    <string name="ipv6_was_disabled">IPv6 has been disabled</string>
    <string name="log_enabled">Log enabled</string>
    <string name="log_disabled">Log disabled</string>
    <string name="log_was_enabled">Log has been enabled</string>
    <string name="log_was_disabled">Log has been disabled</string>
    <string name="log_cleared">Log cleared</string>
    <string name="show_log">Show REJECT log</string>
    <string name="clear_log">Clear log</string>
    <string name="applying_rules">Applying iptables rules.</string>
    <string name="applyingipv6_rules">Applying ip6tables rules.</string>
    <string name="saving_rules">Saving iptables rules.</string>
    <string name="deleting_rules">Deleting iptables rules.</string>
    <string name="rules_applied">Rules applied with success</string>
    <string name="rules_saved">Rules saved with success</string>
    <string name="rules_deleted">Rules deleted with success</string>
    <string name="pass_titleset">Set password lock</string>
    <string name="pass_titleget">Password required</string>
    <string name="enterpass">Enter the password:</string>
    <string name="enternewpass">Enter the new password (leave blank to remove):</string>
    <string name="passdefined">Password lock defined</string>
    <string name="passremoved">Password lock removed</string>
    <string name="passerror">Error changing password lock</string>
    <string name="working">Working...</string>
    <string name="reading_apps">Reading installed applications</string>
    <string name="please_wait">Please wait</string>
    <string name="mode_header">Mode: %s</string>
    <string name="mode_whitelist">White list (allow selected)</string>
    <string name="mode_blacklist">Black list (block selected)</string>
    <string name="toast_bin_installed">Android Firewall: Binary files installed!</string>
    <string name="toast_enabled">Android Firewall: Firewall enabled!</string>
    <string name="toast_error_enabling">Android Firewall: Error enabling firewall!</string>
    <string name="toast_disabled">Android Firewall: Firewall disabled!</string>
    <string name="set_custom_script">Set custom script</string>
    <string name="importrules">Import Rules</string>
    <string name="exportrules">Export Rules</string>
    <string name="managerulefiles">Manage Rule Files</string>
    <string name="wifi">WiFi</string>
    <string name="data">Data</string>
    <string name="roaming">Roam</string>
    <string name="clear">Clear</string>
    <string name="defaultprofile">Default</string>
    <string name="profile1">Profile 1</string>
    <string name="profile2">Profile 2</string>
    <string name="profile3">Profile 3</string>
    <string name="profile4">Profile 4</string>
    <string name="profile5">Profile 5</string>
    <string name="saveprofile">Create Profile</string>
    <string name="profileselect">Please choose which profile you want to apply</string>
    <string name="loadprofile">Load Profile</string>
    <string name="rulesoptions">Rules Management</string>
    <string name="profilesoptions">Profile Management</string>
    <string name="ipv6_title">IPv6 Support</string>
    <string name="notifications_title">Notification Support</string>
    <string name="enableLog_title">Enable Firewall Log</string>
    <string name="profilenames">Edit Profile Names</string>
    <string name="vpn_title">VPN Support</string>
    <string name="roaming_title">Roaming Support</string>
    <string name="usersettings">Settings</string>
    <string name="taskertoast_title">Tasker/Locale/Shortcut Notifications</string>
    <string name="ipv6_summary">This setting enables or disables IPv6 support</string>
    <string name="vpn_summary">This setting enables or disables VPN support</string>
    <string name="roaming_summary">This setting enables or disables Roaming network support</string>
    <string name="taskertoast_summary">This setting enables or disables Notification Pop-ups when the firewall is modified by Tasker, Locale, Llama, Macrodroid, or the shortcuts themselves.</string>
    <string name="log_summary">This setting enables or disables the Firewall Logs</string>
    <string name="notification_summary">This setting enables or disables notifications for newly installed applications that need Internet access</string>
    <string name="help_usage_description"><b>Using Android Firewall</b>\n<b>1.</b> Click on <b>Mode</b> to switch between <i>White List</i> and <i>Black List</i> modes.
\n<b>2.</b> Mark the applications that you want to block or allow (depending on the selected mode), for each interface.
\n<b>3.</b> Open the menu and enable the firewall. If the firewall is already enabled, just select <b>Apply rules</b>.
\nThe rules will be saved and automatically restored when you restart your phone.
\nIf you want to check all current iptables rules, select <b>Show rules</b> from the Navigation Drawer.</string>
    <string name="help_usage_widgets">\n<b>Widgets</b>\nTo quickly enable or disable the firewall with a single touch, add the On/Off Widget to your home screen.
\nTo quickly change profiles or enable/disable the firewall, add the Menu Widget to your home screen.</string>
    <string name="help_usage_logs">\n<b>Firewall logs</b>\nIf you want to see which applications have been blocked by Android Firewall, open the <i>Settings</i> menu and enable the Log.
\nAndroid Firewall will then log each application blocked. You can check the log by opening the menu and selecting <b>Show log</b> from the Navigation Drawer. 
\nSome newer devices, most notably the Nexus devices, use NFLOG instead of LOG.  Android Firewall now supports both. Devices that use NFLOG now have a pair of services that run in order to catch the data.  These services only run when logging is enabled.  
\n
\nAndroid Firewall supports logging of ACCEPTED packets as well.  By logging those packets you can see where apps are sending your data.  You can then use that information to block access to certain IPs via the Custom Script option or your HOSTS file.
\n</string>
    <string name="help_usage_pwdsearch"><b>Password lock</b>\nYou can set a password lock for Android Firewall by using the <b>Set password</b> option in the Navigation Drawer.
\nTo remove the password protection, just reset it to blank.
\n<b>App search</b>\nYou can search for a specific app by typing the first few letters of the apps name in the search bar next to the spinner.
\n</string>
    <string name="help_usage_interfaces"><b>Supported Interfaces</b>\nAlong side the traditional WiFi and Data interfaces, three other interfaces are now supported.  Support for VPNs, Roaming, and LANs are available.  These are enabled under <i>Settings</i>.
\n
\n<i>VPN support</i> allows apps to only access the data stream when connected to a VPN.
\n
\n<i>Roaming support</i> allows apps to access the data stream when you are roaming.
\n
\n<i>LAN support</i> allows apps to access LAN data but not the Internet.  LAN support requries the new <i>Automatic Firewall Rules</i> option in <i>Settings</i> to be enabled.  Please refer to the description for more information.
\n
\n<b>NOTE:</b><i>Automatic Firewall Rules and LAN support</i> require the Internet permission and Access WiFi State permission in order to access the Subnet and LAN address information for each interface.  <b>Android Firewall</b> in no way actually transmits data or accesses the Internet.
\n</string>
    <string name="help_usage_tether"><i>Tethering support</i> allows you to tether a laptop/tablet/phone to your device without having to disable the firewall.  This is new and improved and no longer requires allowing "apps that run as root" and "kernel".  Bluetooth tethering interfaces are now supported by this setting.
\n</string>
    <string name="help_usage_tasker"><b>Tasker/Locale Support</b>\n<i>Android Firewall</i> contains a plugin for Tasker and Locale.  The plugin allows those apps to Enable or Disable the firewall and change profiles based on different variables.  For more information please read the Tasker instructions under the Profiles Help tab.
\nNotifications from Tasker, Locale, and the shortcuts stating changes have been made to the firewall are disabled by default.  They can be enabled under <i>Settings</i>.
\n</string>
    <string name="help_usage_multiuser"><b>Multi-user Support</b>\n<i>Android Firewall</i> supports multiple users on tablets.  Multi-user support requires you to use Blacklist at this time and must be enabled under Settings.  Multi-user support uses unique IPTABLES chains for each individual user so each user has control over what can access the data stream.  
\n</string>
    <string name="help_usage_input"><b>INPUT Chain Support</b>\n<i>Android Firewall</i> supports INPUT chains.  INPUT chains are used to prevent communication from outside sources.  INPUT chains works a little bit differently than the OUTPUT chains in <i>Android Firewall</i>.  INPUT chains applies to both WiFi and cellular data connections at the same time since there is no way to apply the rules to a specific interface.  INPUT chains works with both Blacklist and Whitelist just like current OUTPUT chains.  This feature is designed so that if you deny an app access to Data and INPUT but still want it to work on WiFi it will.  For example if you deny a web browser access the Data and INPUT but give it access to WiFi the browser will still function correctly when on WiFi.  INPUT chains only work on Android 4.x due to limitations in the older kernels.    
\n</string>
    <string name="help_usage_ipv6lang"><b>Other settings</b>\n
\n<i>IPv6 support</i> is available under <i>Settings</i> for those who use IPv6.
\n
\nUsers can change the apps language to one of the supported languages under <i>Settings</i>.
\n</string>
    <string name="help_usage_sdx86"><i>SDcard support</i> for users who have moved apps to their SDcard.  This setting is now automatic.  There is no need to enable or disable it.
\n
\n<i>x86 Support</i> for devices running Intel processors.  
\n</string>
    <string name="help_usage_shortcuts"><i>Application Shortcuts</i> are available for quick access to enabling or disabling the firewall and all of your profiles.  These shortcuts can also be used by apps like Llama and Macrodroid for situation based application.
\n</string>
    <string name="help_usage_media"><b>Information</b>\n
\n<i>Media Server</i> is <b>required</b> for <i>YouTube</i> to function.
\n</string>
    <string name="help_usage_reports"><i>Android Firewall</i> can generate error reports in order to gather the information needed to correct issues seen by users.  This ability generates 3 files containing device information, but NO personal information, which is then written to your external storage so you can see what is data is being collected.\n 
\nThey are kept in a folder called af_error_reports.  The files are zipped and the user given the option to e-mail the files to the developer. Please include a detailed description of what you were doing when the issue happened.
\n</string>
</resources>