<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="ipv6enabled"
        android:summaryOff="@string/ipv6_summary"
        android:summaryOn="@string/ipv6_summary"
        android:title="@string/ipv6_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vpnenabled"
        android:summaryOff="@string/vpn_summary"
        android:summaryOn="@string/vpn_summary"
        android:title="@string/vpn_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="roamingenabled"
        android:summaryOff="@string/roaming_summary"
        android:summaryOn="@string/roaming_summary"
        android:title="@string/roaming_title" />

    <CheckBoxPreference
        android:key="notifyenabled"
        android:summaryOff="@string/notification_summary"
        android:summaryOn="@string/notification_summary"
        android:title="@string/notifications_title" />

    <CheckBoxPreference
        android:key="logenabled"
        android:summaryOff="@string/log_summary"
        android:summaryOn="@string/log_summary"
        android:title="@string/enableLog_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="taskertoastenabled"
        android:summaryOff="@string/taskertoast_summary"
        android:summaryOn="@string/taskertoast_summary"
        android:title="@string/taskertoast_title" />

</PreferenceScreen>