<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_items"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/enableipv4"
                android:checkable="true"
                android:showAsAction="ifRoom"
                android:title="@string/fw_enabled"/>
            <item
                android:id="@+id/applyrules"
                android:showAsAction="ifRoom"
                android:title="@string/applyrules"/>
            <item
                android:id="@+id/rulesoptions"
                android:showAsAction="ifRoom"
                android:title="@string/rulesoptions">

                <!-- "Rules Management" submenu -->
                <menu>
                    <item
                        android:id="@+id/exportrules"
                        android:showAsAction="ifRoom"
                        android:title="@string/exportrules"/>
                    <item
                        android:id="@+id/importrules"
                        android:showAsAction="ifRoom"
                        android:title="@string/importrules"/>
                    <item
                        android:id="@+id/managerulefiles"
                        android:showAsAction="ifRoom"
                        android:title="@string/managerulefiles"/>
                </menu>
            </item>
            <item
                android:id="@+id/profilesoptions"
                android:showAsAction="ifRoom"
                android:title="@string/profilesoptions">

                <!-- "Profiles Management" submenu -->
                <menu>
                    <item
                        android:id="@+id/saveprofile"
                        android:showAsAction="ifRoom"
                        android:title="@string/saveprofile"/>
                    <item
                        android:id="@+id/loadprofile"
                        android:showAsAction="ifRoom"
                        android:title="@string/loadprofile"/>
                    <item
                        android:id="@+id/editprofilenames"
                        android:showAsAction="ifRoom"
                        android:title="@string/profilenames"/>
                </menu>
            </item>
            <item
                android:id="@+id/usersettings"
                android:showAsAction="ifRoom"
                android:title="@string/usersettings"/>
            <item
                android:id="@+id/showlog"
                android:showAsAction="ifRoom"
                android:title="@string/show_log"/>
            <item
                android:id="@+id/clearlog"
                android:showAsAction="ifRoom"
                android:title="@string/clear_log"/>
            <item
                android:id="@+id/showrules"
                android:showAsAction="ifRoom"
                android:title="@string/showrules"/>
            <item
                android:id="@+id/setpwd"
                android:showAsAction="ifRoom"
                android:title="@string/setpwd"/>
            <item
                android:id="@+id/customscript"
                android:showAsAction="ifRoom"
                android:title="@string/set_custom_script"/>
            <item
                android:id="@+id/help"
                android:showAsAction="ifRoom"
                android:title="@string/help"/>
            <item
                android:id="@+id/exit"
                android:showAsAction="ifRoom"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>